--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body>
     <!-- the select player character screen -->
     <div id="homescreen" class="container-fluid animated zoomIn bounceOut">
-        <img class="img-fluid" src="" alt="" />
+        <img class="img-fluid" src="assets/images/shenlong.gif" alt="shenlong img" height="250" width="250" />
         <br>
         <br>
-        <h1>USE THE FORCE, CHOOSE YOUR CHARACTER! </h1>
+        <h1>Save the Earth, pick your fighter! </h1>
         <br>
         <div id="game" class="ctr container card-deck">
         </div>
@@ -37,7 +37,7 @@
         </div>
         <div class="row text-center paddingTop">
             <div class="col-5">
-                Jedi:
+                Warrior:
                 <div class="container" style="width: 30%;">
                     <div id="playerDiv"></div>
                     <div id="playerHealthDiv"></div>
@@ -67,8 +67,8 @@
     <div class="container-fluid ">
         <div id="globalMsg" class="animated fadeInUp">
             <p class="shadow">
-                WEll DONE Space Dweller!
-                <br> The universe will now be at peace.
+                WEll DONE!
+                <br> The Earth will now be at peace.
             </p>
         </div>
     </div>
