--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <!-- the select player character screen -->
     <div id="homescreen" class="container-fluid animated zoomIn bounceOut">
-        <img class="img-fluid" src="assets/images/shenlong.gif" alt="shenlong img" height="250" width="250" />
+        <img class="img-fluid" src="assets/images/dbzlogo.png" alt="shenlong img" height="250" width="250" />
         <br>
         <br>
         <h1>Save the Earth, pick your fighter! </h1>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <!-- the main game screen -->
-    <div id="battlescreen" class="bg-trans container-fluid animated slideInDown">
+    <div id="battlescreen" class="bg-trans container-fluid animated bounceInRight">
         <div class="row">
             <div class="col-12 ctr">
                 Deterrents of peace:
@@ -38,11 +38,11 @@
         <div class="row text-center paddingTop">
             <div class="col-5">
                 Warrior:
-                <div class="container" style="width: 30%;">
+                <div class="container">
                     <div id="playerDiv"></div>
                     <div id="playerHealthDiv"></div>
                 </div>
-            </div>
+            </div>ç
             <div class="col-2 paddingTop">
                 <!-- VS. -->
                 <img src="assets/images/Vs_battle.png" alt="VS" width="100" />
